// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KolNav nested navigation landmarks assigns a single nav id and multiple ul ids for expanded submenus 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav">
      <nav aria-label="Main navigation" class="kol-nav__navigation" id="kol-nav-nonce">
        <ul class="kol-nav__list">
          <li class="kol-nav__list-item kol-nav__list-item--expanded kol-nav__list-item--has-children">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <div class="kol-link kol-link--inline">
                  <a aria-controls="kol-nav-list-0-0-nonce" aria-expanded="true" class="kol-link__interactive-element" href="#section">
                    <span class="kol-link__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          Section
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                        <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right kolicon-minus" role="presentation"></i>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
            <ul class="kol-nav__list kol-nav__list--nested kol-nav__list--vertical" id="kol-nav-list-0-0-nonce">
              <li class="kol-nav__list-item kol-nav__list-item--expanded kol-nav__list-item--has-children">
                <div class="kol-nav__entry-wrapper">
                  <div class="kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                    <div class="kol-link kol-link--inline">
                      <a aria-controls="kol-nav-list-0-0-1-0-nonce" aria-expanded="true" class="kol-link__interactive-element" href="#child-link">
                        <span class="kol-link__text kol-span">
                          <span class="kol-span__container">
                            <span class="kol-span__label">
                              Child link
                            </span>
                            <span aria-hidden="true" class="kol-span__slot" hidden="">
                              <slot name="expert" slot="expert"></slot>
                            </span>
                            <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right kolicon-minus" role="presentation"></i>
                          </span>
                        </span>
                      </a>
                    </div>
                  </div>
                </div>
                <ul class="kol-nav__list kol-nav__list--nested kol-nav__list--vertical" id="kol-nav-list-0-0-1-0-nonce">
                  <li class="kol-nav__list-item kol-nav__list-item--active">
                    <div class="kol-nav__entry-wrapper">
                      <div class="kol-nav__entry kol-nav__entry--button kol-nav__entry--collapsible">
                        <div class="kol-button kol-button--normal kol-button--standalone">
                          <button class="kol-button__interactive-element" type="button">
                            <span class="kol-button__text kol-span">
                              <span class="kol-span__container">
                                <span class="kol-span__label">
                                  Grandchild info
                                </span>
                                <span aria-hidden="true" class="kol-span__slot" hidden="">
                                  <slot name="expert" slot="expert"></slot>
                                </span>
                              </span>
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
              </li>
              <li class="kol-nav__list-item">
                <div class="kol-nav__entry-wrapper">
                  <div class="kol-nav__entry kol-nav__entry--button kol-nav__entry--collapsible">
                    <div class="kol-button kol-button--normal kol-button--standalone">
                      <button class="kol-button__interactive-element" type="button">
                        <span class="kol-button__text kol-span">
                          <span class="kol-span__container">
                            <span class="kol-span__label">
                              Child button
                            </span>
                            <span aria-hidden="true" class="kol-span__slot" hidden="">
                              <slot name="expert" slot="expert"></slot>
                            </span>
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </li>
              <li class="kol-nav__list-item">
                <div class="kol-nav__entry-wrapper">
                  <div class="kol-nav__entry kol-nav__entry--button kol-nav__entry--collapsible">
                    <div class="kol-button kol-button--normal kol-button--standalone">
                      <button class="kol-button__interactive-element" type="button">
                        <span class="kol-button__text kol-span">
                          <span class="kol-span__container">
                            <span class="kol-span__label">
                              Child hint
                            </span>
                            <span aria-hidden="true" class="kol-span__slot" hidden="">
                              <slot name="expert" slot="expert"></slot>
                            </span>
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </li>
            </ul>
          </li>
        </ul>
      </nav>
    </div>
  </template>
</kol-nav>
`;

exports[`kol-nav should render with _label="Nav Label" _links="[{\\"_label\\":\\"Homepage\\",\\"_href\\":\\"#\\"},{\\"_label\\":\\"Nav - aria-current\\",\\"_href\\":\\"#\\",\\"_active\\":true},{\\"_label\\":\\"3 Navigation point\\",\\"_href\\":\\"#\\",\\"_icons\\":\\"codicon codicon-home\\",\\"_children\\":[{\\"_label\\":\\"3.1 Navigation point\\",\\"_icons\\":\\"codicon codicon-home\\",\\"_href\\":\\"#\\"}]},{\\"_label\\":\\"6 Keine eigene Seite, mit Icon\\",\\"_icons\\":\\"codicon codicon-squirrel\\"}]" 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav">
      <nav aria-label="Nav Label" class="kol-nav__navigation" id="kol-nav-nonce">
        <ul class="kol-nav__list">
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <div class="kol-link kol-link--inline">
                  <a class="kol-link__interactive-element" href="#">
                    <span class="kol-link__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          Homepage
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--active">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <div class="kol-link kol-link--inline">
                  <a class="kol-link__interactive-element" href="#">
                    <span class="kol-link__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          Nav - aria-current
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--has-children">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <div class="kol-link kol-link--inline">
                  <a aria-expanded="false" class="kol-link__interactive-element" href="#">
                    <span class="kol-link__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          3 Navigation point
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                        <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right kolicon-plus" role="presentation"></i>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--button kol-nav__entry--collapsible">
                <div class="kol-button kol-button--normal kol-button--standalone">
                  <button class="kol-button__interactive-element" type="button">
                    <span class="kol-button__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          6 Keine eigene Seite, mit Icon
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </nav>
    </div>
  </template>
</kol-nav>
`;

exports[`kol-nav should render with _label="Nav Label" _links=[{"_label":"Homepage","_href":"#"},{"_label":"Nav - aria-current","_href":"#","_active":true},{"_label":"3 Navigation point","_href":"#","_icons":"codicon codicon-home","_children":[{"_label":"3.1 Navigation point","_icons":"codicon codicon-home","_href":"#"}]},{"_label":"6 Keine eigene Seite, mit Icon","_icons":"codicon codicon-squirrel"}] _collapsible=false 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav">
      <nav aria-label="Nav Label" class="kol-nav__navigation" id="kol-nav-nonce">
        <ul class="kol-nav__list">
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--link">
                <div class="kol-link kol-link--inline">
                  <a class="kol-link__interactive-element" href="#">
                    <span class="kol-link__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          Homepage
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--active">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--link">
                <div class="kol-link kol-link--inline">
                  <a class="kol-link__interactive-element" href="#">
                    <span class="kol-link__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          Nav - aria-current
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--has-children">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--link">
                <div class="kol-link kol-link--inline">
                  <a class="kol-link__interactive-element" href="#">
                    <span class="kol-link__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          3 Navigation point
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--button">
                <div class="kol-button kol-button--normal kol-button--standalone">
                  <button class="kol-button__interactive-element" type="button">
                    <span class="kol-button__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          6 Keine eigene Seite, mit Icon
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </nav>
    </div>
  </template>
</kol-nav>
`;

exports[`kol-nav should render with _label="Nav Label" _links=[{"_label":"Homepage","_href":"#"},{"_label":"Nav - aria-current","_href":"#","_active":true},{"_label":"3 Navigation point","_href":"#","_icons":"codicon codicon-home","_children":[{"_label":"3.1 Navigation point","_icons":"codicon codicon-home","_href":"#"}]},{"_label":"6 Keine eigene Seite, mit Icon","_icons":"codicon codicon-squirrel"}] _hasCompactButton=false 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav">
      <nav aria-label="Nav Label" class="kol-nav__navigation" id="kol-nav-nonce">
        <ul class="kol-nav__list">
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <div class="kol-link kol-link--inline">
                  <a class="kol-link__interactive-element" href="#">
                    <span class="kol-link__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          Homepage
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--active">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <div class="kol-link kol-link--inline">
                  <a class="kol-link__interactive-element" href="#">
                    <span class="kol-link__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          Nav - aria-current
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--has-children">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <div class="kol-link kol-link--inline">
                  <a aria-expanded="false" class="kol-link__interactive-element" href="#">
                    <span class="kol-link__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          3 Navigation point
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                        <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right kolicon-plus" role="presentation"></i>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--button kol-nav__entry--collapsible">
                <div class="kol-button kol-button--normal kol-button--standalone">
                  <button class="kol-button__interactive-element" type="button">
                    <span class="kol-button__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          6 Keine eigene Seite, mit Icon
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </nav>
    </div>
  </template>
</kol-nav>
`;

exports[`kol-nav should render with _label="Nav Label" _links=[{"_label":"Homepage","_href":"#"},{"_label":"Nav - aria-current","_href":"#","_active":true},{"_label":"3 Navigation point","_href":"#","_icons":"codicon codicon-home","_children":[{"_label":"3.1 Navigation point","_icons":"codicon codicon-home","_href":"#"}]},{"_label":"6 Keine eigene Seite, mit Icon","_icons":"codicon codicon-squirrel"}] _hasCompactButton=true _hideLabel=true 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav kol-nav--is-compact">
      <nav aria-label="Nav Label" class="kol-nav__navigation" id="kol-nav-nonce">
        <ul class="kol-nav__list">
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <div class="kol-link kol-link--hide-label kol-link--inline">
                  <a aria-label="Homepage" class="kol-link__interactive-element" href="#">
                    <span class="kol-link__text kol-span kol-span--hide-label">
                      <span class="kol-span__container">
                        <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-link" role="presentation"></i>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                      </span>
                    </span>
                  </a>
                  <div class="kol-link__tooltip">
                    <div class="kol-tooltip__floating">
                      <div class="kol-tooltip__arrow"></div>
                      <span class="kol-span kol-tooltip__content">
                        <span class="kol-span__container">
                          <span class="kol-span__label">
                            Homepage
                          </span>
                          <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--active">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <div class="kol-link kol-link--hide-label kol-link--inline">
                  <a aria-label="Nav - aria-current" class="kol-link__interactive-element" href="#">
                    <span class="kol-link__text kol-span kol-span--hide-label">
                      <span class="kol-span__container">
                        <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-link" role="presentation"></i>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                      </span>
                    </span>
                  </a>
                  <div class="kol-link__tooltip">
                    <div class="kol-tooltip__floating">
                      <div class="kol-tooltip__arrow"></div>
                      <span class="kol-span kol-tooltip__content">
                        <span class="kol-span__container">
                          <span class="kol-span__label">
                            Nav - aria-current
                          </span>
                          <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--has-children">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <div class="kol-link kol-link--hide-label kol-link--inline">
                  <a aria-expanded="false" aria-label="3 Navigation point" class="kol-link__interactive-element" href="#">
                    <span class="kol-link__text kol-span kol-span--hide-label">
                      <span class="kol-span__container">
                        <i aria-hidden="true" class="codicon codicon-home kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                        <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right kolicon-plus" role="presentation"></i>
                      </span>
                    </span>
                  </a>
                  <div class="kol-link__tooltip">
                    <div class="kol-tooltip__floating">
                      <div class="kol-tooltip__arrow"></div>
                      <span class="kol-span kol-tooltip__content">
                        <span class="kol-span__container">
                          <span class="kol-span__label">
                            3 Navigation point
                          </span>
                          <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--button kol-nav__entry--collapsible">
                <div class="kol-button kol-button--hide-label kol-button--normal kol-button--standalone">
                  <button aria-label="6 Keine eigene Seite, mit Icon" class="kol-button__interactive-element" type="button">
                    <span class="kol-button__text kol-span kol-span--hide-label">
                      <span class="kol-span__container">
                        <i aria-hidden="true" class="codicon codicon-squirrel kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                      </span>
                    </span>
                  </button>
                  <div class="kol-button__tooltip">
                    <div class="kol-tooltip__floating">
                      <div class="kol-tooltip__arrow"></div>
                      <span class="kol-span kol-tooltip__content">
                        <span class="kol-span__container">
                          <span class="kol-span__label">
                            6 Keine eigene Seite, mit Icon
                          </span>
                          <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </nav>
      <div class="kol-nav__compact">
        <div class="kol-nav__toggle-button">
          <div class="kol-button kol-button--hide-label kol-button--normal kol-button--standalone">
            <button aria-controls="kol-nav-nonce" aria-expanded="false" aria-label="kol-nav-maximize" class="kol-button__interactive-element" type="button">
              <span class="kol-button__text kol-span kol-span--hide-label">
                <span class="kol-span__container">
                  <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-chevron-right" role="presentation"></i>
                  <span aria-hidden="true" class="kol-span__slot" hidden="">
                    <slot name="expert" slot="expert"></slot>
                  </span>
                </span>
              </span>
            </button>
            <div class="kol-button__tooltip">
              <div class="kol-tooltip__floating">
                <div class="kol-tooltip__arrow"></div>
                <span class="kol-span kol-tooltip__content">
                  <span class="kol-span__container">
                    <span class="kol-span__label">
                      kol-nav-maximize
                    </span>
                    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-nav>
`;

exports[`kol-nav should render with _label="Nav Label" _links=[{"_label":"Homepage","_href":"#"},{"_label":"Nav - aria-current","_href":"#","_active":true},{"_label":"3 Navigation point","_href":"#","_icons":"codicon codicon-home","_children":[{"_label":"3.1 Navigation point","_icons":"codicon codicon-home","_href":"#"}]},{"_label":"6 Keine eigene Seite, mit Icon","_icons":"codicon codicon-squirrel"}] _hasCompactButton=true 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav">
      <nav aria-label="Nav Label" class="kol-nav__navigation" id="kol-nav-nonce">
        <ul class="kol-nav__list">
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <div class="kol-link kol-link--inline">
                  <a class="kol-link__interactive-element" href="#">
                    <span class="kol-link__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          Homepage
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--active">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <div class="kol-link kol-link--inline">
                  <a class="kol-link__interactive-element" href="#">
                    <span class="kol-link__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          Nav - aria-current
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--has-children">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <div class="kol-link kol-link--inline">
                  <a aria-expanded="false" class="kol-link__interactive-element" href="#">
                    <span class="kol-link__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          3 Navigation point
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                        <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right kolicon-plus" role="presentation"></i>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--button kol-nav__entry--collapsible">
                <div class="kol-button kol-button--normal kol-button--standalone">
                  <button class="kol-button__interactive-element" type="button">
                    <span class="kol-button__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          6 Keine eigene Seite, mit Icon
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </nav>
      <div class="kol-nav__compact">
        <div class="kol-nav__toggle-button">
          <div class="kol-button kol-button--hide-label kol-button--normal kol-button--standalone">
            <button aria-controls="kol-nav-nonce" aria-expanded="true" aria-label="kol-nav-minimize" class="kol-button__interactive-element" type="button">
              <span class="kol-button__text kol-span kol-span--hide-label">
                <span class="kol-span__container">
                  <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-chevron-left" role="presentation"></i>
                  <span aria-hidden="true" class="kol-span__slot" hidden="">
                    <slot name="expert" slot="expert"></slot>
                  </span>
                </span>
              </span>
            </button>
            <div class="kol-button__tooltip">
              <div class="kol-tooltip__floating">
                <div class="kol-tooltip__arrow"></div>
                <span class="kol-span kol-tooltip__content">
                  <span class="kol-span__container">
                    <span class="kol-span__label">
                      kol-nav-minimize
                    </span>
                    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-nav>
`;

exports[`kol-nav should render with _label="Nav Label" _links=[{"_label":"Homepage","_href":"#"},{"_label":"Nav - aria-current","_href":"#","_active":true},{"_label":"3 Navigation point","_href":"#","_icons":"codicon codicon-home","_children":[{"_label":"3.1 Navigation point","_icons":"codicon codicon-home","_href":"#"}]},{"_label":"6 Keine eigene Seite, mit Icon","_icons":"codicon codicon-squirrel"}] _hasIconsWhenExpanded=false 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav">
      <nav aria-label="Nav Label" class="kol-nav__navigation" id="kol-nav-nonce">
        <ul class="kol-nav__list">
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <div class="kol-link kol-link--inline">
                  <a class="kol-link__interactive-element" href="#">
                    <span class="kol-link__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          Homepage
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--active">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <div class="kol-link kol-link--inline">
                  <a class="kol-link__interactive-element" href="#">
                    <span class="kol-link__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          Nav - aria-current
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--has-children">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <div class="kol-link kol-link--inline">
                  <a aria-expanded="false" class="kol-link__interactive-element" href="#">
                    <span class="kol-link__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          3 Navigation point
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                        <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right kolicon-plus" role="presentation"></i>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--button kol-nav__entry--collapsible">
                <div class="kol-button kol-button--normal kol-button--standalone">
                  <button class="kol-button__interactive-element" type="button">
                    <span class="kol-button__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          6 Keine eigene Seite, mit Icon
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </nav>
    </div>
  </template>
</kol-nav>
`;

exports[`kol-nav should render with _label="Nav Label" _links=[{"_label":"Homepage","_href":"#"},{"_label":"Nav - aria-current","_href":"#","_active":true},{"_label":"3 Navigation point","_href":"#","_icons":"codicon codicon-home","_children":[{"_label":"3.1 Navigation point","_icons":"codicon codicon-home","_href":"#"}]},{"_label":"6 Keine eigene Seite, mit Icon","_icons":"codicon codicon-squirrel"}] _hasIconsWhenExpanded=true 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav">
      <nav aria-label="Nav Label" class="kol-nav__navigation" id="kol-nav-nonce">
        <ul class="kol-nav__list">
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <div class="kol-link kol-link--inline">
                  <a class="kol-link__interactive-element" href="#">
                    <span class="kol-link__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          Homepage
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--active">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <div class="kol-link kol-link--inline">
                  <a class="kol-link__interactive-element" href="#">
                    <span class="kol-link__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          Nav - aria-current
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--has-children">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <div class="kol-link kol-link--inline">
                  <a aria-expanded="false" class="kol-link__interactive-element" href="#">
                    <span class="kol-link__text kol-span">
                      <span class="kol-span__container">
                        <i aria-hidden="true" class="codicon codicon-home kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
                        <span class="kol-span__label">
                          3 Navigation point
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                        <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right kolicon-plus" role="presentation"></i>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--button kol-nav__entry--collapsible">
                <div class="kol-button kol-button--normal kol-button--standalone">
                  <button class="kol-button__interactive-element" type="button">
                    <span class="kol-button__text kol-span">
                      <span class="kol-span__container">
                        <i aria-hidden="true" class="codicon codicon-squirrel kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
                        <span class="kol-span__label">
                          6 Keine eigene Seite, mit Icon
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </nav>
    </div>
  </template>
</kol-nav>
`;

exports[`kol-nav should render with _label="Nav Label" _links=[{"_label":"Homepage","_href":"#"},{"_label":"Nav - aria-current","_href":"#","_active":true},{"_label":"3 Navigation point","_href":"#","_icons":"codicon codicon-home","_children":[{"_label":"3.1 Navigation point","_icons":"codicon codicon-home","_href":"#"}]},{"_label":"6 Keine eigene Seite, mit Icon","_icons":"codicon codicon-squirrel"}] _hideLabel=false 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav">
      <nav aria-label="Nav Label" class="kol-nav__navigation" id="kol-nav-nonce">
        <ul class="kol-nav__list">
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <div class="kol-link kol-link--inline">
                  <a class="kol-link__interactive-element" href="#">
                    <span class="kol-link__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          Homepage
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--active">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <div class="kol-link kol-link--inline">
                  <a class="kol-link__interactive-element" href="#">
                    <span class="kol-link__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          Nav - aria-current
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--has-children">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <div class="kol-link kol-link--inline">
                  <a aria-expanded="false" class="kol-link__interactive-element" href="#">
                    <span class="kol-link__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          3 Navigation point
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                        <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right kolicon-plus" role="presentation"></i>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--button kol-nav__entry--collapsible">
                <div class="kol-button kol-button--normal kol-button--standalone">
                  <button class="kol-button__interactive-element" type="button">
                    <span class="kol-button__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          6 Keine eigene Seite, mit Icon
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </nav>
    </div>
  </template>
</kol-nav>
`;

exports[`kol-nav should render with _label="Nav Label" _links=[{"_label":"Homepage","_href":"#"},{"_label":"Nav - aria-current","_href":"#","_active":true},{"_label":"3 Navigation point","_href":"#","_icons":"codicon codicon-home","_children":[{"_label":"3.1 Navigation point","_icons":"codicon codicon-home","_href":"#"}]},{"_label":"6 Keine eigene Seite, mit Icon","_icons":"codicon codicon-squirrel"}] _hideLabel=true 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav kol-nav--is-compact">
      <nav aria-label="Nav Label" class="kol-nav__navigation" id="kol-nav-nonce">
        <ul class="kol-nav__list">
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <div class="kol-link kol-link--hide-label kol-link--inline">
                  <a aria-label="Homepage" class="kol-link__interactive-element" href="#">
                    <span class="kol-link__text kol-span kol-span--hide-label">
                      <span class="kol-span__container">
                        <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-link" role="presentation"></i>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                      </span>
                    </span>
                  </a>
                  <div class="kol-link__tooltip">
                    <div class="kol-tooltip__floating">
                      <div class="kol-tooltip__arrow"></div>
                      <span class="kol-span kol-tooltip__content">
                        <span class="kol-span__container">
                          <span class="kol-span__label">
                            Homepage
                          </span>
                          <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--active">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <div class="kol-link kol-link--hide-label kol-link--inline">
                  <a aria-label="Nav - aria-current" class="kol-link__interactive-element" href="#">
                    <span class="kol-link__text kol-span kol-span--hide-label">
                      <span class="kol-span__container">
                        <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-link" role="presentation"></i>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                      </span>
                    </span>
                  </a>
                  <div class="kol-link__tooltip">
                    <div class="kol-tooltip__floating">
                      <div class="kol-tooltip__arrow"></div>
                      <span class="kol-span kol-tooltip__content">
                        <span class="kol-span__container">
                          <span class="kol-span__label">
                            Nav - aria-current
                          </span>
                          <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--has-children">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <div class="kol-link kol-link--hide-label kol-link--inline">
                  <a aria-expanded="false" aria-label="3 Navigation point" class="kol-link__interactive-element" href="#">
                    <span class="kol-link__text kol-span kol-span--hide-label">
                      <span class="kol-span__container">
                        <i aria-hidden="true" class="codicon codicon-home kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                        <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right kolicon-plus" role="presentation"></i>
                      </span>
                    </span>
                  </a>
                  <div class="kol-link__tooltip">
                    <div class="kol-tooltip__floating">
                      <div class="kol-tooltip__arrow"></div>
                      <span class="kol-span kol-tooltip__content">
                        <span class="kol-span__container">
                          <span class="kol-span__label">
                            3 Navigation point
                          </span>
                          <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--button kol-nav__entry--collapsible">
                <div class="kol-button kol-button--hide-label kol-button--normal kol-button--standalone">
                  <button aria-label="6 Keine eigene Seite, mit Icon" class="kol-button__interactive-element" type="button">
                    <span class="kol-button__text kol-span kol-span--hide-label">
                      <span class="kol-span__container">
                        <i aria-hidden="true" class="codicon codicon-squirrel kol-icon kol-icon__icon kol-span__icon kol-span__icon--left" role="presentation"></i>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                      </span>
                    </span>
                  </button>
                  <div class="kol-button__tooltip">
                    <div class="kol-tooltip__floating">
                      <div class="kol-tooltip__arrow"></div>
                      <span class="kol-span kol-tooltip__content">
                        <span class="kol-span__container">
                          <span class="kol-span__label">
                            6 Keine eigene Seite, mit Icon
                          </span>
                          <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </nav>
    </div>
  </template>
</kol-nav>
`;

exports[`kol-nav should render with _label="Nav Label" _links=[{"_label":"Homepage","_href":"#"},{"_label":"Nav - aria-current","_href":"#","_active":true},{"_label":"3 Navigation point","_href":"#","_icons":"codicon codicon-home","_children":[{"_label":"3.1 Navigation point","_icons":"codicon codicon-home","_href":"#"}]},{"_label":"6 Keine eigene Seite, mit Icon","_icons":"codicon codicon-squirrel"}] 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav">
      <nav aria-label="Nav Label" class="kol-nav__navigation" id="kol-nav-nonce">
        <ul class="kol-nav__list">
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <div class="kol-link kol-link--inline">
                  <a class="kol-link__interactive-element" href="#">
                    <span class="kol-link__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          Homepage
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--active">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <div class="kol-link kol-link--inline">
                  <a class="kol-link__interactive-element" href="#">
                    <span class="kol-link__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          Nav - aria-current
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--has-children">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <div class="kol-link kol-link--inline">
                  <a aria-expanded="false" class="kol-link__interactive-element" href="#">
                    <span class="kol-link__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          3 Navigation point
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                        <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right kolicon-plus" role="presentation"></i>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </li>
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--button kol-nav__entry--collapsible">
                <div class="kol-button kol-button--normal kol-button--standalone">
                  <button class="kol-button__interactive-element" type="button">
                    <span class="kol-button__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          6 Keine eigene Seite, mit Icon
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </nav>
    </div>
  </template>
</kol-nav>
`;

exports[`kol-nav should render with _label="Nav with an active grandchild, buttons and texts" _links=[{"_label":"Section","_href":"#section","_children":[{"_label":"Child","_href":"#child","_children":[{"_label":"Grandchild","_href":"#grandchild","_active":true}]},{"_label":"Child button","_on":{}},{"_label":"Disabled button","_disabled":true,"_on":{}},{"_label":"Child text"}]},{"_label":"Collapsed section","_children":[{"_label":"Hidden child","_href":"#hidden"}]}] 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav">
      <nav aria-label="Nav with an active grandchild, buttons and texts" class="kol-nav__navigation" id="kol-nav-nonce">
        <ul class="kol-nav__list">
          <li class="kol-nav__list-item kol-nav__list-item--expanded kol-nav__list-item--has-children">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                <div class="kol-link kol-link--inline">
                  <a aria-controls="kol-nav-list-0-0-nonce" aria-expanded="true" class="kol-link__interactive-element" href="#section">
                    <span class="kol-link__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          Section
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                        <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right kolicon-minus" role="presentation"></i>
                      </span>
                    </span>
                  </a>
                </div>
              </div>
            </div>
            <ul class="kol-nav__list kol-nav__list--nested kol-nav__list--vertical" id="kol-nav-list-0-0-nonce">
              <li class="kol-nav__list-item kol-nav__list-item--expanded kol-nav__list-item--has-children">
                <div class="kol-nav__entry-wrapper">
                  <div class="kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                    <div class="kol-link kol-link--inline">
                      <a aria-controls="kol-nav-list-0-0-1-0-nonce" aria-expanded="true" class="kol-link__interactive-element" href="#child">
                        <span class="kol-link__text kol-span">
                          <span class="kol-span__container">
                            <span class="kol-span__label">
                              Child
                            </span>
                            <span aria-hidden="true" class="kol-span__slot" hidden="">
                              <slot name="expert" slot="expert"></slot>
                            </span>
                            <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right kolicon-minus" role="presentation"></i>
                          </span>
                        </span>
                      </a>
                    </div>
                  </div>
                </div>
                <ul class="kol-nav__list kol-nav__list--nested kol-nav__list--vertical" id="kol-nav-list-0-0-1-0-nonce">
                  <li class="kol-nav__list-item kol-nav__list-item--active">
                    <div class="kol-nav__entry-wrapper">
                      <div class="kol-nav__entry kol-nav__entry--collapsible kol-nav__entry--link">
                        <div class="kol-link kol-link--inline">
                          <a class="kol-link__interactive-element" href="#grandchild">
                            <span class="kol-link__text kol-span">
                              <span class="kol-span__container">
                                <span class="kol-span__label">
                                  Grandchild
                                </span>
                                <span aria-hidden="true" class="kol-span__slot" hidden="">
                                  <slot name="expert" slot="expert"></slot>
                                </span>
                              </span>
                            </span>
                          </a>
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
              </li>
              <li class="kol-nav__list-item">
                <div class="kol-nav__entry-wrapper">
                  <div class="kol-nav__entry kol-nav__entry--button kol-nav__entry--collapsible">
                    <div class="kol-button kol-button--normal kol-button--standalone">
                      <button class="kol-button__interactive-element" type="button">
                        <span class="kol-button__text kol-span">
                          <span class="kol-span__container">
                            <span class="kol-span__label">
                              Child button
                            </span>
                            <span aria-hidden="true" class="kol-span__slot" hidden="">
                              <slot name="expert" slot="expert"></slot>
                            </span>
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </li>
              <li class="kol-nav__list-item">
                <div class="kol-nav__entry-wrapper">
                  <div class="kol-nav__entry kol-nav__entry--button kol-nav__entry--collapsible">
                    <div class="kol-button kol-button--disabled kol-button--normal kol-button--standalone">
                      <button class="kol-button__interactive-element" disabled="" type="button">
                        <span class="kol-button__text kol-span">
                          <span class="kol-span__container">
                            <span class="kol-span__label">
                              Disabled button
                            </span>
                            <span aria-hidden="true" class="kol-span__slot" hidden="">
                              <slot name="expert" slot="expert"></slot>
                            </span>
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </li>
              <li class="kol-nav__list-item">
                <div class="kol-nav__entry-wrapper">
                  <div class="kol-nav__entry kol-nav__entry--button kol-nav__entry--collapsible">
                    <div class="kol-button kol-button--normal kol-button--standalone">
                      <button class="kol-button__interactive-element" type="button">
                        <span class="kol-button__text kol-span">
                          <span class="kol-span__container">
                            <span class="kol-span__label">
                              Child text
                            </span>
                            <span aria-hidden="true" class="kol-span__slot" hidden="">
                              <slot name="expert" slot="expert"></slot>
                            </span>
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </li>
            </ul>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--has-children">
            <div class="kol-nav__entry-wrapper">
              <div class="kol-nav__entry kol-nav__entry--button kol-nav__entry--collapsible">
                <div class="kol-button kol-button--normal kol-button--standalone">
                  <button aria-expanded="false" class="kol-button__interactive-element" type="button">
                    <span class="kol-button__text kol-span">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          Collapsed section
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden="">
                          <slot name="expert" slot="expert"></slot>
                        </span>
                        <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right kolicon-plus" role="presentation"></i>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </nav>
    </div>
  </template>
</kol-nav>
`;

exports[`kol-nav should render with _label="Nav with an invalid entry" _links=[{"_icons":"kolicon-home"}] 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav">
      <nav aria-label="Nav with an invalid entry" class="kol-nav__navigation" id="kol-nav-nonce">
        <ul class="kol-nav__list"></ul>
      </nav>
    </div>
  </template>
</kol-nav>
`;
